fix: update centered class margin for improved alignment

--- a/src/styles/layouts.module.scss
+++ b/src/styles/layouts.module.scss
@@ -72,5 +72,5 @@
 }
 
 .centered {
-  margin: 0;
+  margin: auto;
 }
